packages/svelte/tests/compiler-errors/samples/export-derived-state/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-derived-export',
		message: 'Cannot export derived state from a module',
		position: [24, 66]
	}
});
